# serializer version: 1
# name: test_snapshot_custom_class
  MyCustomClass(
    prop1=1,
    prop2='a',
    prop3=set({
      1,
      2,
      3,
    }),
  )
# ---
# name: test_snapshot_custom_repr_class
  MyCustomReprClass(
    prop1=1,
    prop2='a',
    prop3={1, 2, 3},
  )
# ---
